alignment fix

--- a/assets/styles/minimap-icons.css
+++ b/assets/styles/minimap-icons.css
@@ -39,7 +39,7 @@
 .ember_spirit        .herolist__hero__link:before { background-position: -381px -87px  }
 .enchantress         .herolist__hero__link:before { background-position: -5px -131px   }
 .enigma              .herolist__hero__link:before { background-position: -47px -131px  }
-.faceless_void       .herolist__hero__link:before { background-position: -90px -129px  }
+.faceless_void       .herolist__hero__link:before { background-position: -89px -129px  }
 .gyrocopter          .herolist__hero__link:before { background-position: -131px -131px }
 .huskar              .herolist__hero__link:before { background-position: -173px -131px }
 .invoker             .herolist__hero__link:before { background-position: -215px -131px }
